fix button alignment

--- a/src/assets/css/NewSummary.css
+++ b/src/assets/css/NewSummary.css
@@ -207,7 +207,7 @@
     height: 35px;
   }
 
-  .cacnel-dialog{
+  .cancel-dialog{
     background-color: #6c757d;
     border-color: #6c757d;
     color: #fff;
